# gemini-server

./: CHANGELOG.md  README.md  gemini-server.cabal
.builds/: ghc-8.10.1.yml  ghc-8.10.3.yml  ghc-8.8.3.yml  ghc-8.8.4.yml  ghc-9.0.1.yml  sdist.yml
Network/Gemini/: Server.hs
