cabal-version:       2.2

name:                gemini-server
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          fgaz@fgaz.me
-- copyright:
category:            Network, Gemini
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Network.Gemini.Server
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , network
                     , network-run
                     , network-uri
                     , text
                     , utf8-string
                     , bytestring
                     , text
  -- hs-source-dirs:
  ghc-options:         -Wall
  default-language:    Haskell2010

