cabal-version:       2.2

name:                gemini-server
version:             0.1.0.0
synopsis:            A lightweight server for the Gemini protocol
-- description:
homepage:            https://sr.ht/~fgaz/haskell-gemini/
bug-reports:         https://todo.sr.ht/~fgaz/haskell-gemini
license:             BSD-3-Clause
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          Francesco Gazzetta <fgaz@fgaz.me>
copyright:           © 2020 Francesco Gazzetta and contributors
category:            Network, Gemini
extra-source-files:  CHANGELOG.md

source-repository head
  type:                git
  location:            https://git.sr.ht/~fgaz/gemini-server

library
  exposed-modules:     Network.Gemini.Server
  build-depends:       base
                     , network
                     , network-run
                     , network-uri
                     , text
                     , utf8-string
                     , bytestring
                     , text
                     , hslogger
  ghc-options:         -Wall
  default-language:    Haskell2010

